Config changes for gcloud deployment

--- a/views/index.loggedOut.views.html
+++ b/views/index.loggedOut.views.html
@@ -1,4 +1,4 @@
-<h1>Justin Canzonetta's JWT Demo</h1>
+<h1>Justin Canzonetta's REST API Demo</h1>
 
 <div>Follow the link below to login/register at Auth0.</div>
 
